--- a/Css/style.css
+++ b/Css/style.css
@@ -406,6 +406,7 @@ tbody tr:hover {
     border-collapse: collapse;
     margin: 20px 0;
     font-family: 'Arial', sans-serif;
+    border: solid black 3px;
 }
 
 .admin-monitoring-table th,
@@ -416,15 +417,20 @@ tbody tr:hover {
 }
 
 .admin-monitoring-table .even-row {
-    background-color: #ededed;
+    background-color: #99a140;
+}
+
+.admin-monitoring-table .even-row:hover {
+    background-color: #99b140;
 }
 
 .admin-monitoring-table .odd-row {
     background-color: #ffffff;
 }
 
+
 .admin-monitoring-table th {
-    background-color: #f5f5f5;
+    background-color: #255E33;
     font-weight: bold;
     border-bottom: 2px solid #333;
 }
@@ -435,7 +441,7 @@ tbody tr:hover {
 
 .admin-monitoring-table th a {
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     position: relative;
     padding-right: 15px;
 }
